# vk_raytrace

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  accelstruct.cpp  accelstruct.hpp  binding.h  example.cpp  example.hpp  hdr_sampling.cpp  hdr_sampling.hpp  log_nvprosample.txt  main.cpp  nvml_monitor.hpp  offscreen.cpp  offscreen.hpp  raypick.hpp  raypick_KHR.hpp  rayquery.cpp  rayquery.hpp  raytracer.cpp  raytracer.hpp  render_output.cpp  render_output.hpp  renderer.h  rtx_pipeline.cpp  rtx_pipeline.hpp  sample_example.cpp  sample_example.hpp  sample_gui.cpp  scene.cpp  scene.hpp  skydome.cpp  skydome.hpp  structures.h  tiny_gltf.cpp  tonemapper.hpp  tools.hpp  vkalloc.hpp
data/: BoxVertexColors.gltf  hdri-19_color_small.hdr  log_vk_raytrace.txt  robot.gltf
media/: robot-toon.gltf  std_env.hdr
shaders/: binding.h  brdf.glsl  common.glsl  compress.glsl  disneyEval.glsl  disneySampling.glsl  env_sampling.glsl  final.frag  globals.glsl  gltf_material.glsl  gltfmaterial.glsl  host_device.h  integrate_brdf.frag  layouts.glsl  passthrough.vert  pathtrace.comp  pathtrace.glsl  pathtrace.rahit  pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss  pathtraceShadow.rmiss  pbrEval.glsl  pbrSampling.glsl  pbr_disney.glsl  pbr_gltf.glsl  pick.rchit  pick.rgen  pick.rmiss  post.frag  prefilter_diffuse.frag  prefilter_glossy.frag  punctual.glsl  random.glsl  raycommon.glsl  raycommon.h.glsl  raytrace.rahit  raytrace.rchit  raytrace.rgen  raytrace.rmiss  (+12 more)
src/: accelstruct.cpp  accelstruct.hpp  hdr_sampling.cpp  hdr_sampling.hpp  main.cpp  nvml_monitor.hpp  queue.hpp  rayquery.cpp  rayquery.hpp  render_output.cpp  render_output.hpp  renderer.h  rtx_pipeline.cpp  rtx_pipeline.hpp  sample_example.cpp  sample_example.hpp  sample_gui.cpp  sample_gui.hpp  scene.cpp  scene.hpp  tiny_gltf.cpp
